--- a/app/src/main/res/layout/tela_objetivos.xml
+++ b/app/src/main/res/layout/tela_objetivos.xml
@@ -9,185 +9,286 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        app:srcCompat="@drawable/logo_horizontal_verde"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="30dp" />
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_horizontal_verde" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="30dp"
         android:text="@string/title_objetivos"
         android:textAlignment="textEnd"
         android:textColor="@color/secondary"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="263dp"
-        tools:layout_editor_absoluteY="30dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="343dp"
         android:layout_height="51dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="34dp"
         android:text="@string/txt_objetivos"
         android:textAlignment="center"
         android:textColor="@color/darkgray"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="76dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageButton
         android:id="@+id/btn_obj_3"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_6"
-        app:srcCompat="@drawable/obj_3"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_2"
+        app:srcCompat="@drawable/obj_3" />
 
     <ImageButton
         android:id="@+id/btn_obj_12"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/imageView14"
-        app:srcCompat="@drawable/obj_12"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_11"
+        app:srcCompat="@drawable/obj_12" />
 
     <ImageButton
         android:id="@+id/imageView14"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginEnd="30dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
-        app:srcCompat="@drawable/obj_15"
-        tools:layout_editor_absoluteX="276dp"
-        tools:layout_editor_absoluteY="606dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_15"
+        app:srcCompat="@drawable/obj_15" />
 
     <ImageButton
         android:id="@+id/btn_obj_15"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
-        app:srcCompat="@drawable/obj_14"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="606dp" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView14"
+        app:layout_constraintStart_toEndOf="@+id/btn_obj_13"
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_13"
+        app:srcCompat="@drawable/obj_14" />
 
     <ImageButton
         android:id="@+id/btn_obj_13"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
-        app:srcCompat="@drawable/obj_13"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="606dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_obj_10"
+        app:srcCompat="@drawable/obj_13" />
 
     <ImageButton
         android:id="@+id/btn_obj_11"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_15"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_15"
-        app:srcCompat="@drawable/obj_11"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_10"
+        app:srcCompat="@drawable/obj_11" />
 
     <ImageButton
         android:id="@+id/btn_obj_10"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_13"
-        app:srcCompat="@drawable/obj_10"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_obj_7"
+        app:srcCompat="@drawable/obj_10" />
 
     <ImageButton
         android:id="@+id/imageView10"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_12"
-        app:srcCompat="@drawable/obj_9"
-        tools:layout_editor_absoluteY="380dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_8"
+        app:srcCompat="@drawable/obj_9" />
 
     <ImageButton
         android:id="@+id/btn_obj_8"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_11"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_11"
-        app:srcCompat="@drawable/obj_8"
-        tools:layout_editor_absoluteY="380dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_7"
+        app:srcCompat="@drawable/obj_8" />
 
     <ImageButton
         android:id="@+id/btn_obj_7"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_10"
-        app:srcCompat="@drawable/obj_7"
-        tools:layout_editor_absoluteY="380dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_obj_4"
+        app:srcCompat="@drawable/obj_7" />
 
     <ImageButton
         android:id="@+id/btn_obj_6"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/imageView10"
-        app:srcCompat="@drawable/obj_6"
-        tools:layout_editor_absoluteY="268dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_5"
+        app:srcCompat="@drawable/obj_6" />
 
     <ImageButton
         android:id="@+id/btn_obj_4"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_7"
-        app:srcCompat="@drawable/obj_4"
-        tools:layout_editor_absoluteY="268dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_obj_1"
+        app:srcCompat="@drawable/obj_4" />
 
     <ImageButton
         android:id="@+id/btn_obj_5"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_8"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_8"
-        app:srcCompat="@drawable/obj_5"
-        tools:layout_editor_absoluteY="268dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_4"
+        app:srcCompat="@drawable/obj_5" />
 
     <ImageButton
         android:id="@+id/btn_obj_1"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_4"
-        app:srcCompat="@drawable/obj_1"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:srcCompat="@drawable/obj_1" />
 
     <ImageButton
         android:id="@+id/btn_obj_2"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@color/transparent"
         android:backgroundTint="@color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="@+id/btn_obj_5"
         app:layout_constraintStart_toStartOf="@+id/btn_obj_5"
-        app:srcCompat="@drawable/obj_2"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintTop_toTopOf="@+id/btn_obj_1"
+        app:srcCompat="@drawable/obj_2" />
+
+
+    <!--    inicio menu-->
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="409dp"
+        android:layout_height="70dp"
+        android:background="@color/lightgray"
+        app:backgroundTint="@color/mediumgray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/btn_home"
+            android:layout_width="50sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="25sp"
+            android:layout_marginTop="12sp"
+            android:background="@color/transparent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_inicio" />
+
+        <ImageButton
+            android:id="@+id/btn_forum"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="100sp"
+            android:layout_marginTop="12sp"
+            android:background="@color/transparent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_forum" />
+
+        <ImageButton
+            android:id="@+id/btn_info"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="250sp"
+            android:layout_marginTop="12sp"
+            android:background="@color/transparent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_info" />
+
+        <ImageButton
+            android:id="@+id/menu_menu"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="335sp"
+            android:layout_marginTop="12sp"
+            android:background="@color/transparent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/icon_menu" />
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_marginBottom="30dp"
+        android:background="@color/transparent"
+        android:scaleType="centerInside"
+        android:translationZ="100dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="@+id/bottomNavigationView"
+        app:layout_constraintStart_toStartOf="@+id/bottomNavigationView"
+        app:srcCompat="@drawable/btn_add" />
+
+    <!--    fim bottom menu-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
